@@ -1,3 +1,9 @@
+2012-10-18	The InnoDB Team
+
+	* row/row0sel.c:
+	Fix Bug#14758405: ALTER TABLE: ADDING SERIAL NULL DATATYPE: ASSERTION:
+	LEN <= SIZEOF(ULONGLONG)
+
 2012-10-16	The InnoDB Team
 
 	* dict/dict0dict.c, handler/handler0alter.cc, include/dict0dict.h:
